--- a/cloudcore/src/components/App/App.scss
+++ b/cloudcore/src/components/App/App.scss
@@ -3,6 +3,25 @@
     margin: 0 auto;
     padding: 1rem;
 
+    .header-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 1rem;
+    }
+
+    button {
+        padding: 0.5rem 1rem;
+        border: 1px solid #ced4da;
+        border-radius: 0.25rem;
+        background-color: #fff;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #4b6278;
+        }
+    }
+
     h1 {
         text-align: center;
         font-size: 2rem;
